--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "little game on JS",
   "main": "main.js",
   "scripts": {
-    "build": "webpack",
-    "start": "npx webpack serve"
+    "build": "electron-builder",
+    "start": "npx webpack --config webpack.config.js && electron ."
   },
   "repository": {
     "type": "git",
@@ -18,13 +18,31 @@
   },
   "homepage": "https://github.com/Cyraullie/HacknSlash#readme",
   "devDependencies": {
+    "electron-builder": "^24.6.4",
+    "electron": "^27.0.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "electron": "^27.0.2",
     "howler": "^2.2.4"
+  },
+  "build": {
+    "appId": "com.example.myapp",
+    "productName": "game",
+    "directories": {
+      "output": "dist"
+    },
+    "win": {
+      "icon": "Logo_M.ico",
+      "target": "nsis"
+    },
+    "files": [
+      "**/*",
+      "!node_modules/**/*",
+      "!db"
+    ]
   }
+  
 }
